# aupatterns

./: AUTHORS  CMakeLists.txt  COPYING  README.md
doc/: analysis.ods  analysis.qti  aupatterns.txt
src/: CMakeLists.txt  combination.py  main.c
